--- a/microbenchmarks/run-micro-benchmarks.cabal
+++ b/microbenchmarks/run-micro-benchmarks.cabal
@@ -6,7 +6,7 @@ author:              Buddhika Chamith, Joel Svensson, Ryan Newton
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable run-benchmarks.exe
+executable run-micro-benchmarks.exe
   main-is:             run-benchmarks.hs
   other-extensions:    CPP, BangPatterns, DeriveGeneric
   build-depends:       base >=4.6, deepseq >=1.3, time >=1.4,
