--- a/stack.yaml
+++ b/stack.yaml
@@ -5,7 +5,8 @@ resolver: lts-3.8
 
 # Local packages, usually specified by relative directory name
 packages:
- - '.'
+ - './microbenchmarks'
+ - './full_benchmarks'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
@@ -13,6 +14,8 @@ extra-deps:
  - hsbencher-fusion-0.3.15.2
  - io-streams-1.3.2.0
  - handa-gdata-0.7.0.3
+
+local-bin-path: .
 
 # Override default flag values for local packages and extra-deps
 flags: {}
