1. Added trampoline caching. 2. One more test 3. Makefile and run harness changes to accomodate multiple test files

--- a/libcallpatch/tests/Makefile
+++ b/libcallpatch/tests/Makefile
@@ -1,6 +1,7 @@
-ifeq ($(STRADDLE_POINT),)
-	STRADDLE_POINT=1
-endif
+
+SRCS = $(wildcard *.c)
+
+EXES = $(patsubst %.c,%.exe,$(SRCS))
 
 # hardcoded ??
 UBIROOT=../../
@@ -11,13 +12,13 @@ LIBDIR=$(UBIROOT)build/lib
 # USE .a for now (static) 
 DEPS =  $(UBIROOT)/deps/distorm/distorm3.a $(LIBDIR)/libcallpatch.a -lpthread 
 
-all: straddle_wait_free 
+all: $(EXES) 
 
 clean: 
-	rm test_straddle_wait_free.exe
+	rm *.exe
 
-straddle_wait_free: 
-	$(CC)  -std=gnu99 -g $(CFLAGS) -I$(UBIROOT)deps/distorm/include -I$(UBIROOT)include test_straddle_wait_free.c -o test_straddle_wait_free.exe -L$(LIBDIR) $(DEPS) 
+%.exe: %.c
+	$(CC)  -std=gnu99 -g $(CFLAGS) -I$(UBIROOT)deps/distorm/include -I$(UBIROOT)include $< -o $@ -L$(LIBDIR) $(DEPS) 
 
-test: straddle_wait_free
+test: $(EXES) 
 	./testall.sh
