--- a/libpointpatch/microbenchmarks/wait_time_rdtsc/Makefile
+++ b/libpointpatch/microbenchmarks/wait_time_rdtsc/Makefile
@@ -1,7 +1,7 @@
 
 
 installLib: 
-	(cd ../../src && make install CC=$(CC) CXX=$(CXX) CFLAGS="-DWAIT_SPIN_RDTSC")  
+	(cd ../../src && make install CC=$(CC) CXX=$(CXX) CFLAGS="-DWAIT_SPIN_RDTSC "$(CFLAGS))  
 
 cleanLib: 
 	(cd ../../src && make clean)
