--- a/libpointpatch/src/Makefile
+++ b/libpointpatch/src/Makefile
@@ -1,4 +1,8 @@
 
+ROOT = ../..
+BUILD = $(ROOT)/build
+INSTALL= $(ROOT)/build/lib
+
 # using icc requires some extra flags.
 # these flags are probably different from when using gcc
 # since a lot of what we do is not standard-c (asm, REG_RIP, etc not standard!)
@@ -12,29 +16,29 @@ CODE = patcher.c
 OBJ0 = $(CODE:.cpp=.o)
 OBJ  = $(OBJ0:.c=.o)
 
-INCLUDES = -I../../include -I../../deps/distorm/include
+COMMON = $(wildcard $(ROOT)/common/src/patch/*.c)
+COMMON_OBJ = $(COMMON:.c=.o)
+
+INCLUDES = -I$(ROOT)/include -I$(ROOT)/common/include -I$(ROOT)/deps/distorm/include
 
 LIBS =
 DEPS = ../../deps/distorm/distorm3.a
-
-BUILD = ../../build
-INSTALL = $(BUILD)/lib
 
 AR = ar
 RM = rm
 
 .PHONY: test build distorm install
 
-build: $(OBJ)
+build: $(OBJ) $(COMMON_OBJ)
 
 libpointpatch.a: build distorm
 	if [ -d libpointpatch.a ]; then $(RM) -f libpointpatch.a; fi
 	mkdir temp;cd temp; $(AR) -x ../$(DEPS)
-	$(AR) rc libpointpatch.a  $(OBJ) temp/*.o
+	$(AR) rc libpointpatch.a  $(OBJ) $(COMMON_OBJ) temp/*.o
 	$(RM) -rf temp
 
 libpointpatch.so: build distorm
-	$(CXX) $(LIBS) -shared -Wl,-soname,libpointpatch.so -o libpointpatch.so $(OBJ) $(DEPS)
+	$(CXX) $(LIBS) -shared -Wl,-soname,libpointpatch.so -o libpointpatch.so $(OBJ) $(COMMON_OBJ) $(DEPS)
 
 install: libpointpatch.so libpointpatch.a
 	if [ ! -d $(BUILD) ]; then mkdir $(BUILD); fi
