Fixing build faliures due to a linking error. I don't really understand why the fix works though. (e.g: Why the redeclartion in the wait_free is necessary for linker to see the inline functions included from patch_utils.h

--- a/libcallpatch/tests/Makefile
+++ b/libcallpatch/tests/Makefile
@@ -18,7 +18,7 @@ clean:
 	rm *.exe
 
 %.exe: %.c
-	$(CC)  -std=gnu99 -g $(CFLAGS) -I$(UBIROOT)deps/distorm/include -I$(UBIROOT)include $< -o $@ -L$(LIBDIR) $(DEPS) 
+	$(CC)  -std=gnu99 -g $(CFLAGS) -I$(UBIROOT)deps/distorm/include -I$(UBIROOT)include -I$(UBIROOT)common/include $< -o $@ -L$(LIBDIR) $(DEPS) 
 
 test: $(EXES) 
 	./testall.sh
