--- a/libpointpatch/tests/Makefile
+++ b/libpointpatch/tests/Makefile
@@ -24,7 +24,7 @@ DEPS =  $(UBIROOT)/deps/distorm/distorm3.a $(LIBDIR)/libpointpatch.a -lpthread
 all: $(EXES)
 
 %.exe: %.c
-	$(CC)  -std=gnu99 -g $(CFLAGS) -I$(UBIROOT)/deps/distorm/include -I$(UBIROOT)/include  $< -o $@ -L$(LIBDIR) $(DEPS)
+	$(CC)  -std=gnu99 -g $(CFLAGS) -I$(UBIROOT)/deps/distorm/include -I$(UBIROOT)/include -I$(UBIROOT)/common/include  $< -o $@ -L$(LIBDIR) $(DEPS)
 
 test: $(EXES)
 	./testall.sh
