--- a/libpointpatch/microbenchmarks/patch_costs_callpatch/stack.yaml
+++ b/libpointpatch/microbenchmarks/patch_costs_callpatch/stack.yaml
@@ -1,7 +1,7 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: ghc-7.8.3
+resolver: ghc-7.10.1
 
 # Local packages, usually specified by relative directory name
 packages:
@@ -29,7 +29,7 @@ extra-deps:
 - bytestring-builder-0.10.6.0.0
 - case-insensitive-1.2.0.5
 - cassava-0.4.4.0
-- cereal-0.5.0.0
+- cereal-0.4.1.1
 - cmdargs-0.10.13
 - conduit-1.2.5.1
 - connection-0.2.5
@@ -44,7 +44,6 @@ extra-deps:
 - data-default-instances-containers-0.0.1
 - data-default-instances-dlist-0.0.1
 - data-default-instances-old-locale-0.0.1
-- directory-1.2.4.0
 - dlist-0.7.1.2
 - entropy-0.3.7
 - erf-2.0.0.0
@@ -72,24 +71,23 @@ extra-deps:
 - monad-control-1.0.0.4
 - monad-par-0.3.4.7
 - monad-par-extras-0.3.3
-- mtl-2.1.3.1
+- mtl-2.2.1
 - mwc-random-0.13.3.2
-- nats-1
 - network-2.6.2.1
 - network-uri-2.6.0.3
+- old-locale-1.0.0.7
+- old-time-1.1.0.3
 - optparse-applicative-0.12.0.0
 - parallel-3.2.0.6
 - parsec-3.1.9
 - pem-0.2.2
 - primitive-0.6.1.0
-- process-1.2.3.0
 - pureMD5-2.1.2.1
 - random-1.1
 - regex-base-0.93.2
 - regex-posix-0.95.2
 - resourcet-1.1.6
 - scientific-0.3.4.2
-- semigroups-0.18
 - socks-0.5.4
 - split-0.2.2
 - statistics-0.13.2.3
@@ -100,11 +98,9 @@ extra-deps:
 - test-framework-0.8.1.1
 - test-framework-hunit-0.3.0.2
 - text-1.2.1.3
-- time-1.5.0.1
 - tls-1.3.3
 - transformers-base-0.4.4
 - transformers-compat-0.4.0.4
-- unix-2.7.1.0
 - unix-compat-0.4.1.4
 - unordered-containers-0.2.5.1
 - utf8-string-1.0.1.1
@@ -112,7 +108,6 @@ extra-deps:
 - vector-algorithms-0.7.0.1
 - vector-binary-instances-0.2.1.0
 - vector-th-unbox-0.2.1.3
-- void-0.7.1
 - x509-1.6.3
 - x509-store-1.6.1
 - x509-system-1.6.1
@@ -127,8 +122,6 @@ local-bin-path: .
 flags:
   text:
     integer-simple: false
-  transformers-compat:
-    three: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
