--- a/libpointpatch/microbenchmarks/toggle-throughput/stack.yaml
+++ b/libpointpatch/microbenchmarks/toggle-throughput/stack.yaml
@@ -1,127 +1,24 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: ghc-7.10.1
+resolver: lts-3.8
 
 # Local packages, usually specified by relative directory name
 packages:
 - hsb_script/
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps:
-- GenericPretty-1.2.1
-- Glob-0.7.5
-- HTTP-4000.2.20
-- HUnit-1.2.5.2
-- abstract-deque-0.3
-- abstract-par-0.3.3
-- aeson-0.10.0.0
-- ansi-terminal-0.6.2.3
-- ansi-wl-pprint-0.6.7.3
-- asn1-encoding-0.9.3
-- asn1-parse-0.9.4
-- asn1-types-0.3.1
-- async-2.0.2
-- attoparsec-0.13.0.1
-- base64-bytestring-1.0.0.1
-- blaze-builder-0.4.0.1
-- byteable-0.1.1
-- bytestring-builder-0.10.6.0.0
-- case-insensitive-1.2.0.5
-- cassava-0.4.4.0
-- cereal-0.4.1.1
-- cmdargs-0.10.13
-- conduit-1.2.5.1
-- connection-0.2.5
-- cookie-0.4.1.6
-- criterion-1.1.0.0
-- crypto-api-0.13.2
-- cryptonite-0.8
-- csv-0.1.2
-- data-default-0.5.3
-- data-default-class-0.0.1
-- data-default-instances-base-0.0.1
-- data-default-instances-containers-0.0.1
-- data-default-instances-dlist-0.0.1
-- data-default-instances-old-locale-0.0.1
-- dlist-0.7.1.2
-- entropy-0.3.7
-- erf-2.0.0.0
-- exceptions-0.8.0.2
-- extensible-exceptions-0.1.1.4
-- handa-gdata-0.7.0.3
-- hashable-1.2.3.3
-- hastache-0.6.1
-- hostname-1.0
-- hourglass-0.2.9
+extra-deps: 
 - hsbencher-1.20.0.5
 - hsbencher-fusion-0.3.15.2
-- http-client-0.4.24
-- http-client-tls-0.2.2
-- http-conduit-2.1.8
-- http-types-0.9
-- ieee754-0.7.6
-- io-streams-1.3.2.0
-- json-0.9.1
-- lifted-base-0.2.3.6
-- math-functions-0.1.5.2
-- memory-0.10
-- mime-types-0.1.0.6
-- mmorph-1.0.4
-- monad-control-1.0.0.4
-- monad-par-0.3.4.7
-- monad-par-extras-0.3.3
-- mtl-2.2.1
-- mwc-random-0.13.3.2
-- network-2.6.2.1
-- network-uri-2.6.0.3
-- old-locale-1.0.0.7
-- old-time-1.1.0.3
-- optparse-applicative-0.12.0.0
-- parallel-3.2.0.6
-- parsec-3.1.9
-- pem-0.2.2
-- primitive-0.6.1.0
-- pureMD5-2.1.2.1
-- random-1.1
-- regex-base-0.93.2
-- regex-posix-0.95.2
-- resourcet-1.1.6
-- scientific-0.3.4.2
-- socks-0.5.4
-- split-0.2.2
-- statistics-0.13.2.3
-- stm-2.4.4
-- streaming-commons-0.1.14.2
-- syb-0.6
-- tagged-0.8.1
-- test-framework-0.8.1.1
-- test-framework-hunit-0.3.0.2
-- text-1.2.1.3
-- tls-1.3.3
-- transformers-base-0.4.4
-- transformers-compat-0.4.0.4
-- unix-compat-0.4.1.4
-- unordered-containers-0.2.5.1
-- utf8-string-1.0.1.1
-- vector-0.11.0.0
-- vector-algorithms-0.7.0.1
-- vector-binary-instances-0.2.1.0
-- vector-th-unbox-0.2.1.3
-- x509-1.6.3
-- x509-store-1.6.1
-- x509-system-1.6.1
-- x509-validation-1.6.3
-- xml-1.3.14
-- zlib-0.6.1.1
-- zlib-bindings-0.1.1.5
+- handa-gdata-0.7.0.3
 
 local-bin-path: .
 
 # Override default flag values for local packages and extra-deps
 flags:
-  text:
-    integer-simple: false
+#  text:
+#    integer-simple: false
 
 # Extra package databases containing global packages
 extra-package-dbs: []
