oops, obey RUN_ARGS in makefile

--- a/microbenchmarks/InvokeDynamic_ToggleThroughput/Makefile
+++ b/microbenchmarks/InvokeDynamic_ToggleThroughput/Makefile
@@ -1,6 +1,8 @@
 
 .PHONY: build run clean
 
+RUN_ARGS ?= 1 3 10000
+
 # This first run generates IDD.class without having a source file:
 build: IDD.class TimingHarness.class IDDL.class
 
@@ -14,7 +16,7 @@ IDD.class: IDDG.java
 # javac TimingHarness.java
 
 run: build
-	time java TimingHarness 1 3 10000
+	time java TimingHarness $(RUN_ARGS)
 
 clean:
 	rm -f *.class
