probe toggle-throughput: change timing to match other implementations

--- a/libfastinst/microbenchmarks/toggle_throughput/Makefile
+++ b/libfastinst/microbenchmarks/toggle_throughput/Makefile
@@ -2,6 +2,9 @@
 
 NUM_THREADS=4
 NUM_ITERATIONS=10000000
+
+RUN_ARGS ?= $(NUM_THREADS) $(NUM_ITERATIONS)
+
 ROOT=../../..
 CFLAGS = -finstrument-functions -fno-inline -fno-optimize-sibling-calls
 
@@ -9,16 +12,16 @@ LIBS = -L$(ROOT)/build/lib -lfastinst -lrt -ldl -lpthread
 
 CXX=g++
 
-all: toggle_throughput.exe 
+all: toggle_throughput.exe
 
-toggle_throughput.exe: 
-	$(CXX) --std=c++11 -g -c $(CFLAGS) func.cpp -o func.o 
-	$(CXX) --std=c++11 -g -c -I$(ROOT)/include -I$(ROOT)/common/include -I. toggle_throughput.cpp -o toggle_throughput.o 
+toggle_throughput.exe:
+	$(CXX) --std=c++11 -g -c $(CFLAGS) func.cpp -o func.o
+	$(CXX) --std=c++11 -g -c -I$(ROOT)/include -I$(ROOT)/common/include -I. toggle_throughput.cpp -o toggle_throughput.o
 	$(CXX) --std=c++11 -g toggle_throughput.o func.o -o toggle_throughput.exe  $(LIBS)
 
 run: toggle_throughput.exe
 	(readelf -s toggle_throughput.exe |grep FUNC | awk -F '[[:space:]]+' '{print $$3 "," $$9}' > functions.txt)
-	LD_LIBRARY_PATH=$(ROOT)/build/lib:$(LD_LIBRARY_PATH) ./toggle_throughput.exe $(NUM_THREADS) $(NUM_ITERATIONS)
+	LD_LIBRARY_PATH=$(ROOT)/build/lib:$(LD_LIBRARY_PATH) ./toggle_throughput.exe $(RUN_ARGS)
 
 clean:
 	rm -f *.o *.exe *.out *.audit *.txt
