--- a/libfastinst/src/Makefile
+++ b/libfastinst/src/Makefile
@@ -22,7 +22,7 @@ override CFLAGS += -DINVOKE_PATCH_CALL
 endif
 
 ifeq ($(AUDIT_PROBES),AUDIT_PROBES)
-override CFLAGS += -DAUDIT_PROBES # -DARG_PATCH_SYNC -DINVOKE_PATCH_SYNC
+override CFLAGS += -DAUDIT_PROBES 
 endif
 
 EXTRA_WARNS= -pedantic 
