--- a/libfastinst/src/Makefile
+++ b/libfastinst/src/Makefile
@@ -1,6 +1,7 @@
 
 ROOT = ../..
 INSTALL= $(ROOT)/build/lib
+DEPS_ROOT= $(ROOT)/deps
 # CFLAGS=-DPROBE_TRUE_EMPTY_ON -DPROBE_CPU_TIME
 # CFLAGS=-DPROBE_HIST_ON -DPROBE_CPU_TIME
 
@@ -41,7 +42,7 @@ EXTRA_WARNS= -pedantic
 
 ARGS= -g -Wall $(EXTRA_WARNS) -I$(ROOT)/include -I$(ROOT)/deps/distorm/include -I$(ROOT)/common/include -I.
 LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
-DEPS = $(INSTALL)/libpointpatch.a $(INSTALL)/libcallpatch.a
+DEPS = $(INSTALL)/libpointpatch.a $(INSTALL)/libcallpatch.a  $(DEPS_ROOT)/asmjit/build/libasmjit.a
 LIBS =
 
 CC  ?= icc
@@ -67,9 +68,15 @@ OBJ  = $(OBJ0:.c=.o)
 
 all: build
 
+asmjit:
+	(cd $(DEPS_ROOT)/asmjit/;\
+		rm -rf build; mkdir build;\
+		cd build; cmake ..; make)
+
 build: $(OBJ) $(COMMON_OBJ)
 
-libfastinst.a: build
+
+libfastinst.a: build asmjit
 	if [ -d libfastinst.a ]; then $(RM) -f libfastinst.a; fi
 	if [ -d temp ]; then $(RM) -rf temp; fi
 	mkdir temp;cd temp; $(foreach dep,$(DEPS),$(AR) -x ../$(dep);) # for DEP in $(DEPS); do $(AR) -x ../${DEP}; done
