--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "benchmarks"]
 	path = benchmarks
 	url = git@github.com:iu-parfunc/prof_apps.git
+[submodule "deps/asmjit"]
+	path = deps/asmjit
+	url = git@github.com:kobalicek/asmjit.git
