--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:iu-parfunc/prof_apps.git
 [submodule "deps/asmjit"]
 	path = deps/asmjit
-	url = git@github.com:kobalicek/asmjit.git
+	url = git@github.com:iu-parfunc/asmjit.git  
