--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/asmjit"]
 	path = deps/asmjit
 	url = git@github.com:iu-parfunc/asmjit.git  
+[submodule "deps/elph"]
+	path = deps/elph
+	url = git@github.com:iu-parfunc/elph.git
