Bug fixes and more statistics

--- a/tools/libaudit/tests/Makefile
+++ b/tools/libaudit/tests/Makefile
@@ -2,28 +2,30 @@
 
 ROOT = ../../..
 
-SRCS = $(wildcard *.cpp)
-
-EXES = $(patsubst %.cpp,%.exe,$(SRCS))
+SRCS = $(wildcard *.cpp) 
 
 # CFLAGS = -O3
 
-ARGS = -I../src/
+EXES = control_flows.exe 
+
+ARGS = -I../src/ 
 
 LIBS = -L$(ROOT)/build/lib -laudit # -lelf -lrt
 
 all: $(EXES)
 
-%.exe: %.cpp
+.cpp.o:
+	  $(CXX+) $(CFLAGS) $(OPTS) -fPIC -c -Wall -o $@ $<
 
-	$(CXX) --std=c++11 -g $(CFLAGS) $(ARGS) -I$(ROOT)/include -I$(ROOT)/common/include -I$(ROOT)/deps/distorm/include $< -o $@ $(LIBS)
+control_flows.exe: 
+	$(CXX) --std=c++11 -g $(CFLAGS) $(ARGS) -I$(ROOT)/include -I$(ROOT)/common/include -I$(ROOT)/deps/distorm/include control_flows.cpp -o $(EXES) $(LIBS)
 
 
 test: $(EXES)
-	readelf -s control_flows.exe |grep FUNC | awk -F '[[:space:]]+' '{print $$3 "," $$9}' | sort -t, -k1 > functions.txt
 	LD_PRELOAD=$(ROOT)/build/lib/libaudit.so ./control_flows.exe
-	# LD_PRELOAD=$(ROOT)/build/lib/libaudit.so AUDIT_FUNCTIONS=_Z10while_funcv ./control_flows.exe
+	# LD_LIBRARY_PATH=../../build/lib:$(LD_LIBRARY_PATH) LD_PRELOAD=$(ROOT)/build/lib/libaudit.so ./h264ref
 	# LD_LIBRARY_PATH=../../build/lib:$(LD_LIBRARY_PATH) AUDIT_FUNCTIONS=_Z10while_funcv ./control_flows.exe
+	# LD_LIBRARY_PATH=../../../build/lib:$(LD_LIBRARY_PATH) ./test
 	
 clean:
 	rm -f *.o *.exe *.txt *.out
