relocating function containing CALL works (initial experiment)

--- a/tools/relocator/src/Makefile
+++ b/tools/relocator/src/Makefile
@@ -14,8 +14,9 @@ ARGS= -I$(ROOT)/include -I$(ROOT)/common/include -I$(ROOT)/deps/distorm/include
 all: relocator.c 
 	gcc $(CFLAGS) $(ARGS) -c relocator.c -o relocator.o 
 
-test: testit.c 
+test: testit.c testcall.c
 	gcc -g testit.c relocator.o  $(DEPS_ROOT)/distorm/distorm3.a -o testit.exe
+	gcc -g testcall.c relocator.o  $(DEPS_ROOT)/distorm/distorm3.a -o testcall.exe	
 
 clean:
 	$(RM) -f *.a *.so 
