--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "deps/bandit"]
 	path = deps/bandit
 	url = git@github.com:joakimkarlsson/bandit.git
+[submodule "deps/doctest"]
+	path = deps/doctest
+	url = git@github.com:onqtam/doctest.git
