--- a/tools/relocator/src/tests/Makefile
+++ b/tools/relocator/src/tests/Makefile
@@ -3,7 +3,8 @@ ROOT = ../../../../
 INSTALL= $(ROOT)/build/lib
 DEPS_ROOT= $(ROOT)/deps
 
-EXTRA_WARNS= -pedantic 
+EXTRA_WARNS= 
+#-pedantic 
 
 CFLAGS = --std=c99 -g -Wall $(EXTRA_WARNS) -I../
 
@@ -16,5 +17,5 @@ all: $(TARG)
 	gcc $(CFLAGS) $< ../relocator.o $(DEPS_ROOT)/distorm/distorm3.a -o $@ 
 
 
-#clean:
-#	$(RM) -f *.a *.so 
+clean:
+	$(RM) -f *.exe
