work in progress

--- a/tools/relocator/src/tests/Makefile
+++ b/tools/relocator/src/tests/Makefile
@@ -9,7 +9,8 @@ EXTRA_WARNS=
 CFLAGS = --std=c99 -g -Wall $(EXTRA_WARNS) -I../
 
 TARG = testit.exe \
-       testcall.exe 
+       testcall.exe \
+       test_small1.exe
 
 all: $(TARG)
 
